--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,5 +15,5 @@ jobs:
       run: |
         wget https://github.com/koalaman/shellcheck/releases/download/latest/shellcheck-latest.linux.x86_64.tar.xz -O shchk.tar.xz
         tar xvf shchk.tar.xz
-        export PATH=$(PWD)/shellcheck-latest:$PATH
+        export PATH=$(pwd)/shellcheck-latest:$PATH
         tests/main.sh
